Corrected java version in pom.xml files and added test endpoint